fixed width and height on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,10 +12,9 @@ $icon-font-path: '../fonts/';
   padding: 0.2em 0;
 }
 
-body, html, .container-img {
+body, html{
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 /* Space out content a bit */
@@ -101,20 +100,21 @@ body {
 }
 
 .div-midle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 500px;
-  height: 500px;
-  margin-top: -250px;
-  margin-left: -250px;
+  width: 100vw;
+  height: 100vw;
+  max-width: 500px;
+  max-height: 500px;
+  margin: auto;
+  margin-top: 75px;
 }
 
 .div-circle{
   position: relative;
   display: block;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
+  max-width: 300px;
+  max-height: 300px;
   margin: auto;
   background-color: #fff;
   box-shadow: 0px 1px 1px #777;
